testsuite/tests/interpreter_errors/invalid_kind/test.out
main.adb

Error: Invalid kind name: PreposterouslyInvalidKind

query p when p is PreposterouslyInvalidKind
                  ^^^^^^^^^^^^^^^^^^^^^^^^^

